@@ -141,6 +141,7 @@ class CalibParsStore() :
                          gu.TIMEPIX,\
                          gu.FLI,\
                          gu.ZYLA,\
+                         gu.EPICSCAM,\
                          gu.PIMAX) : cbase = CalibParsBaseCameraV1()
 
         else :
